test/my-privrtassociation.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_route_table_association.rtbassoc-01b2fe2ddfac5825c:
resource "aws_route_table_association" "myrtbassociation2" {
  route_table_id = aws_route_table.rtb1-natgw-tgw.id
  subnet_id      = aws_subnet.myprivsubnet.id
}
