test/mysgingress-80.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_security_group_rule.sg-0c991999e3313704a-1:
resource "aws_security_group_rule" "mysgingress-80" {
  count=var.mycount
  cidr_blocks = [
      for avpc in var.aws_vpc:
      lookup(var.aws_cidr, avpc)
    ]

  from_port         = 80
  ipv6_cidr_blocks  = []
  prefix_list_ids   = []
  protocol          = "tcp"
  security_group_id = aws_security_group.mysg[count.index].id
  self              = false
  to_port           = 80
  type              = "ingress"
}
