test/mysgrule-egress-all.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_security_group_rule.sg-0c991999e3313704a:
resource "aws_security_group_rule" "mysgegress" {
  count=var.mycount
  cidr_blocks = [
    "0.0.0.0/0",
  ]
  from_port         = 0
  ipv6_cidr_blocks  = []
  prefix_list_ids   = []
  protocol          = "-1"
  security_group_id = aws_security_group.mysg[count.index].id
  self              = false
  to_port           = 0
  type              = "egress"
}
