test/mytgw-attach.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_ec2_transit_gateway_vpc_attachment.tgw-attach-008c183cdff3e83ca:
resource "aws_ec2_transit_gateway_vpc_attachment" "mytgw-attach" {
  count=var.mycount
  dns_support  = "enable"
  ipv6_support = "disable"
  subnet_ids = [
    aws_subnet.myprivsubnet[count.index].id,
  ]
  tags = {
    "Name" = format("TGW-att-to-VPC-10-%s", count.index + 1)
  }
  transit_gateway_default_route_table_association = true
  transit_gateway_default_route_table_propagation = true
  transit_gateway_id                              = data.aws_ec2_transit_gateway.mytgw.id
  vpc_id                                          = aws_vpc.VPC[count.index].id
}
