test/rtb1-natgw-tgw.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_route_table.rtb-040377d3dcbd24da0:
resource "aws_route_table" "rtb1-natgw-tgw" {
  count=var.mycount
  propagating_vgws = []
  route = [
    {
      cidr_block                = "0.0.0.0/0"
      egress_only_gateway_id    = ""
      gateway_id                = ""
      instance_id               = ""
      ipv6_cidr_block           = ""
      nat_gateway_id            = aws_nat_gateway.mynatgw[count.index].id
      network_interface_id      = ""
      transit_gateway_id        = ""
      vpc_peering_connection_id = ""
    },
    {
      cidr_block                = "10.0.0.0/16"
      egress_only_gateway_id    = ""
      gateway_id                = ""
      instance_id               = ""
      ipv6_cidr_block           = ""
      nat_gateway_id            = ""
      network_interface_id      = ""
      transit_gateway_id        = data.aws_ec2_transit_gateway.mytgw.id
      vpc_peering_connection_id = ""
    },
  ]
  tags   = {}
  vpc_id = aws_vpc.VPC[count.index].id
}
